--- a/0421.md
+++ b/0421.md
@@ -63,3 +63,277 @@ true
 2
 ```
 将符号换成`|`以后，没有发生短路。
+
+## 程序组织
+```
+for(dataType:arr){
+	System.out.println(dataType);
+}//遍历arr挨个打印
+```
+```
+System.out.print();//打印数据将它的参数显示在命令窗口，并将输出光标定位在所显示的最后一个字符之后。
+System.out.println();//将输出光标定位在下一行开始
+System.out.printf();//格式化输出形式，可以控制输出的格式。
+```
+## Structure
+**目的：通过练习来熟悉并使用java的流程控制语法，编写java的方法，能够判断java方法的重载**
+- 编写一个sortArr方法
+```
+/**
+* 根据传入的参数来将数组升序或降序排列
+*
+* @param isAsc true 升序， false 降序
+* @param arr
+*/
+static void sort(int arr[], boolean isAsc) {
+
+}
+```
+- 重载上述的sortArr方法，用来实现数组升序排列
+```
+/**
+* 重载方法，将数组升序
+*
+* @param arr 目标数组
+*/
+static void sort(int arr[]) {
+
+}
+```
+- 编写一个main方法用来测试上述两个方法，定义一个数组，内容 {13,26,-3,4,54,26,37,18,69,-10}，编写一个print方法，使用字符串拼接的方式，将数组内容数组输出为如下格式，每5个换行
+```
+[0]=13 [1]=26 [2]=-1 [3]=4 [4]=54
+[5]=26 ....
+```
+***第二小题包括在第一小题上，没有重新做了,java类似c中scanf的语句输入语句没搞清楚***
+```
+class Array
+{
+	public static void main(String[] args) {
+		int []arry = {13,26,-3,4,54,26,37,18,69,-10};
+		int choose = 1;
+		System.out.printf("请选择升序或是降序：\n");
+		System.out.printf("1.升序\n");
+		System.out.printf("2.降序\n");
+
+		switch(choose){
+			case 1:
+				sortArry(arry,true);
+				System.out.println();
+				break;
+			case 2:
+				sortArry(arry,false);
+				System.out.println();
+				break;
+		}
+		sortup(arry);//shengxu
+		printArry(arry);
+		System.out.println();
+		sortdown(arry);//jiangxu
+		printArry(arry);
+		System.out.println();
+
+	}
+	static void sortArry(int arr[],boolean isAsc){
+		if(isAsc == true)//true up;false down
+		{
+			sortup(arr);
+			printArry(arr);
+		}
+		if (isAsc == false)
+		{
+			sortdown(arr);
+			printArry(arr);
+		}
+
+	}
+	public static void printArry(int arr[]){
+		for (int i = 0;i<arr.length;i++)
+		{
+			if(i%5==0)
+				System.out.println();
+			System.out.print("["+i+"]"+"="+arr[i]+" ");
+
+		}
+
+	}
+	static void sortup(int arr[]) {
+		for (int i = 0;i<arr.length-1;i++){
+			for (int j= 0;j<arr.length-i-1;j++){
+				if (arr[j]>arr[j+1]){
+					swap (arr,j,j+1);
+				}
+			}
+		}
+		
+	}
+	static void sortdown(int arr[]) {
+		for (int i = 0;i<arr.length-1;i++){
+			for (int j= 0;j<arr.length-i-1;j++){
+				if (arr[j]<arr[j+1]){
+					swap (arr,j,j+1);
+				}
+			}
+		}
+		
+	}
+	static void swap (int arr[],int i,int j){
+		int temp = arr[i];
+		arr[i] = arr[j];
+		arr[j] = temp;
+	}
+}
+```
+
+## Summary
+- 编写一个方法不使用 * 完成两个数相乘
+```
+int multiply(int n1, int n2) 
+```
+
+```class Multiply
+{
+	public static void main(String[] args) {
+		int n1 = -10;
+		int n2 = -20;
+		multiply(n1,n2);
+
+		
+			
+		
+	}
+	public static void multiply(int n1,int n2){
+		
+		int res=0;
+		int temp = 0;
+		if (n1>0&&n2>0)
+		{
+
+			for (int i = 1;i<=n1;i++)
+			{
+				res = n2+ temp;
+				temp = res;
+
+			}
+			System.out.println(res);
+		}
+		if (n1 ==0 || n2 ==0)
+		{
+			res = 0;
+			System.out.println(res);
+		}
+		if (n1<0 && n2>0)
+		{
+			for (int i = 1;i<=(-n1);i++)
+			{
+				res = n2+ temp;
+				temp = res;
+
+			}
+			System.out.println(-res);
+		}
+		if (n1>0 && n2 < 0)
+		{
+			for (int i=0;i<= n1;i++)
+			{
+				res = (-n2)+ temp;
+				temp = res;
+			}
+			System.out.println(-res);
+		}
+		if (n1 < 0 && n2<0)
+		{
+			for (int i = 1;i<= (-n1);i++)
+			{
+				res = (-n2)+ temp;
+				temp = res;
+			}
+			System.out.println(res);
+		}
+
+	}
+}
+
+```
+- 编写一个方法输入分钟时间，向控制台输出多少年，多少天</br>
+```
+3456789 分钟                         
+3456789 分钟是6年210天
+void convert(long minute)
+```
+```
+class Time{
+	public static void main(String[] args) {
+		int minute = 3456789;
+		convert(minute);
+		
+	}
+	static void convert(long minute){
+		System.out.printf("%d年%d天\n",minute/(60 * 24 * 365),(minute%(60 * 24 *365))/(60 * 24));		
+
+	}
+}
+```
+- 有1.5元钱兑换1分，2分，5分硬币100枚，每种面值至少一个，请输出所有的兑换方案，并统计方案的总数
+```
+class Equation
+{
+	public static void main(String[] args) 
+	{
+		int count=0;
+		int x,y,z;
+		for (x=1;x<=100;x++)
+			for (y=1;y<=100;y++)
+				for (z=1;z<=100;z++)
+				{
+					if (x+y+z==100&&x+2*y+5*z==150)
+					{
+						System.out.printf("%d,%d,%d\n",x,y,z);
+						count++;
+					}
+				}
+		
+		System.out.println(count);
+	}
+}
+```
+- 编写一个方法用于int数组去重，将数组中重复的元素只保留一个
+
+```
+class ArrayFilter {
+    public static void main(String[] args) {
+        filtArray(new int[] {1, 3, 3, 1, -3, -9, 12, 33});
+
+    }
+
+    static int[] filtArray(int[] target) {
+        int finalCount = target.length;
+        for (int i = 0; i < finalCount; i++) {
+            for (int j = i + 1; j < finalCount ; j++) {
+                if (target[i] == target[j]) {
+                    target[j] = target[finalCount - 1];
+                    finalCount--;
+                    j--;
+                }
+            }
+        }
+
+        for (int one : target) {
+            System.out.printf("%d ", one);
+        }
+
+        System.out.println();
+
+        int[] rlt = new int[finalCount];
+        for (int i = 0; i < finalCount ; i++ ) {
+            rlt[i] = target[i];
+        }
+
+        for (int one : rlt) {
+            System.out.printf("%d ", one);
+        }
+        System.out.println();
+        return rlt;
+    }
+}
+```
