--- a/0421.md
+++ b/0421.md
@@ -107,14 +107,16 @@ static void sort(int arr[]) {
 ```
 ***第二小题包括在第一小题上，没有重新做了,java类似c中scanf的语句输入语句没搞清楚***
 ```
+import java.util.Scanner;
 class Array
 {
 	public static void main(String[] args) {
 		int []arry = {13,26,-3,4,54,26,37,18,69,-10};
-		int choose = 1;
+		Scanner sc = new Scanner(System.in);
 		System.out.printf("请选择升序或是降序：\n");
 		System.out.printf("1.升序\n");
 		System.out.printf("2.降序\n");
+		int choose = sc.nextInt();
 
 		switch(choose){
 			case 1:
