--- a/0424.md
+++ b/0424.md
@@ -342,7 +342,69 @@ b</br>
 b</br>
 d</br>
 b</br>
+## 增改
+- Main
+```
+package club.banyuan;
 
+public class Main {
+
+  public static void main(String[] args) {
+    Person person = new Person();
+    Person zhangsan = new Person("张三", 18);
+    Person lisi = new Person("李四");
+    Person wangwu = new Person("王五");
+    Person zhaoliu = new Person("赵六", 20);
+    System.out.printf("一共创建了%d个对象\n",Person.num);
+    System.out.printf("两个参数的构造方法被调用了%d次\n",Person.count);
+  }
+}
+```
+- Person
+```
+package club.banyuan;
+
+public class Person {
+
+  public static int num = 0;
+  public static int count = 0;
+  private String name;
+  private int age;
+
+  public Person(String name, int age) {
+    this.name = name;
+    this.age = age;
+    Person.num++;
+    Person.count++;
+  }
+
+  public Person(String name) {
+    this.name = name;
+    Person.num++;
+  }
+
+  public Person() {
+    Person.num++;
+  }
+
+  public String getName() {
+    return name;
+  }
+
+  public void setName(String name) {
+    this.name = name;
+  }
+
+  public int getAge() {
+    return age;
+  }
+
+  public void setAge(int age) {
+    this.age = age;
+  }
+
+}
+```
 ## 设计一个方法。可以实现获取任意范围内的随机数。包括负数，例如输入randomInt（-10,5）
 ```
 import java.util.Scanner;
