--- a/0421.md
+++ b/0421.md
@@ -105,7 +105,7 @@ static void sort(int arr[]) {
 [0]=13 [1]=26 [2]=-1 [3]=4 [4]=54
 [5]=26 ....
 ```
-***第二小题包括在第一小题上，没有重新做了,java类似c中scanf的语句输入语句没搞清楚***
+***第二小题包括在第一小题上，没有重新做了***
 ```
 import java.util.Scanner;
 class Array
