--- a/0428.md
+++ b/0428.md
@@ -1,4 +1,26 @@
 # 0428
+1. 为什么引入继承的功能，继承用来帮我们解决什么问题
+- 类是具备相同数据属性和行为的对象的模板，处理实际问题的时候，很多类可能存在共通的成员和方法，这些可以成员和方法可以再进行抽象，变为一个更通用的模板（父类），其他的类（子类）只需要继承这个类，就具备相同的成员和方法。
+2. 类继承另一个类之后
+    1. 构造方法是否被继承
+    - 不会被继承，但是子类在实例化对象的时候，如果子类的构造器没有显示的调父类的构造器，就会自动调用父类默认的无参构造器，相当于默认省略了super（）；
+    2. 实例方法和成员(非静态)是否被继承
+    - 可以被继承但是不能被重写，
+    3. 访问权限修饰符是否对子类继承到的方法和成员产生影响
+    
+    - 有影响，比如private类型没有get函数程序不能通过编译
+    4. 是否能够继承静态的方法和成员
+    - 静态属性和方法都是可以被继承的，static修饰的变量和函数，是全局的，和任何类都没关系
+
+3. 是否可以多继承，为什么不引入多继承
+- 可以但是没必要，如果是 B类继承A类，C类继承B类，那么C类同时拥有A类和B类所有的方法和成员，在访问权限允许的情况下在C内部或通过C类对象直接使用，如果B类覆盖了A类的成员或方法，那么C类就无法获取到A类中成员和方法了，仅能访问到B类中覆盖后的成员值和方法。
+4. 是否可以继承自己
+5. 继承后如果子类定义的方法名或成员名和父类一样会出现什么情况
+- 编译报错
+6. 是否所有的java类都有父类
+- 有的，object类就是所有类的父类
+7. 是否可以防止一个类被继承
+- 可以，构造函数设置成private就可以了
 ## 练习
 #### 4.
 ```
@@ -416,7 +438,7 @@ public class MainClass
 	}
 }
 ```
-> 1212 没有继承关系不执行one。
+> 1212 没有继承关系不执行one，即使有继承关系也没用，先加载变量，最终结果还是1212。
 ## jar 练习
 dist下的main.jar 中缺少了club/banyuan/animal/Dog.class和META-INF/MANIFEST.MF。
 请编译src下的Dog.java生成Dog.class。
