--- a/0428.md
+++ b/0428.md
@@ -298,8 +298,7 @@ public class MainClass
 1111
 默认的super();
 2220
-m-- = 1110
---m = 1110
+从左往右计算，m-- = 1111，计算结束m = 1110; --m ,此时m= 1110，--m就是1109相加就是2220
 ```
 
 #### 14. 
