--- a/0428.md
+++ b/0428.md
@@ -5,18 +5,18 @@
     1. 构造方法是否被继承
     - 不会被继承，但是子类在实例化对象的时候，如果子类的构造器没有显示的调父类的构造器，就会自动调用父类默认的无参构造器，相当于默认省略了super（）；
     2. 实例方法和成员(非静态)是否被继承
-    - 可以被继承但是不能被重写，
+    - 可以被继    
     3. 访问权限修饰符是否对子类继承到的方法和成员产生影响
     
-    - 有影响，比如private类型没有get函数程序不能通过编译
+    - 有影响，比如private类型只能在同类中使用没有get函数程序不能通过编译
     4. 是否能够继承静态的方法和成员
     - 静态属性和方法都是可以被继承的，static修饰的变量和函数，是全局的，和任何类都没关系
 
 3. 是否可以多继承，为什么不引入多继承
-- 可以但是没必要，如果是 B类继承A类，C类继承B类，那么C类同时拥有A类和B类所有的方法和成员，在访问权限允许的情况下在C内部或通过C类对象直接使用，如果B类覆盖了A类的成员或方法，那么C类就无法获取到A类中成员和方法了，仅能访问到B类中覆盖后的成员值和方法。
+- 可以但是没必要，如果是 B类继承A类，C类继承B类，那么C类同时拥有A类和B类所有的方法和成员，在访问权限允许的情况下在C内部或通过C类对象直接使用，如果B类覆盖了A类的成员或方法，那么C类就无法获取到A类中成员和方法了，仅能访问到B类中覆盖后的成员值和方法。比如说菱形继承的问题编译器无法解决
 4. 是否可以继承自己
 5. 继承后如果子类定义的方法名或成员名和父类一样会出现什么情况
-- 编译报错
+- 覆盖父类的成员、
 6. 是否所有的java类都有父类
 - 有的，object类就是所有类的父类
 7. 是否可以防止一个类被继承
@@ -298,7 +298,7 @@ public class MainClass
 1111
 默认的super();
 2220
-从左往右计算，m-- = 1111，计算结束m = 1110; --m ,此时m= 1110，--m就是1109相加就是2220
+从左往右计算，（m--） = 1111，计算结束m = 1110; --m ,此时m= 1110，--m就是1109相加就是2220。
 ```
 
 #### 14. 
