--- a/0506/0506.md
+++ b/0506/0506.md
@@ -1,42 +1,243 @@
-## 多态预习问题解析
-1. 什么是多态
-- 同一操作作用于不同的对象，可以有不同的解释，产生不同的执行结果，这就是多态性。简单的说:就是用基类的引用指向子类的对象。
-2. 引入多态是为了解决什么问题的
-- 多态是针对相同的行为，和数据类型无关。这样可以编写出更通用的方法，方法可以针对一类特定的行为，而不是针对单单一种数据类型。这样可以简化代码，并且增加了代码的扩展性，减少类和类之间的关联。
-3. 多态的语法是怎样的
+## 以下的程序输出结果
+1. 
 ```
-package club.banyuan.animal;
-
-public class Animal {
-
-  public String getType() {
-    return "动物";
-  }
+class Base {
+    final public void show() {
+       System.out.println("Base::show() called");
+    }
 }
-package club.banyuan.animal;
-
-public class Elephant extends Animal {
-
-  public String getType() {
-    return "大象";
-  }
+  
+class Derived extends Base {
+    public void show() {
+       System.out.println("Derived::show() called");
+    }
 }
-package club.banyuan.animal;
-
+  
+class Main {
+    public static void main(String[] args) {
+        Base b = new Derived();;
+        b.show();
+    }
+}
+```
+> 父类中的show方法被final修饰，无法被子类override，如果删掉final，结果则是：Derived::show() called
+2. 
+```
+class Base {
+    public static void show() {
+       System.out.println("Base::show() called");
+    }
+}
+  
+class Derived extends Base {
+    public static void show() {
+       System.out.println("Derived::show() called");
+    }
+}
+  
+class Main {
+    public static void main(String[] args) {
+        Base b = new Derived();;
+        b.show();
+    }
+}
+```
+> Base::show() called;static修饰的方法，子类可以使用，但是不可以被重写
+3. 
+```
+class Base {
+    public void Print() {
+        System.out.println("Base");
+    }         
+}
+ 
+class Derived extends Base {    
+    public void Print() {
+        System.out.println("Derived");
+    }
+}
+ 
+class Main{
+    public static void DoPrint( Base o ) {
+        o.Print();   
+    }
+    public static void main(String[] args) {
+        Base x = new Base();
+        Base y = new Derived();
+        Derived z = new Derived();
+        DoPrint(x);
+        DoPrint(y);
+        DoPrint(z);
+    }
+}
+```
+```
+Base
+Derived 多态
+Derived
+```
+4. 
+```
+class Base {
+    public void foo() { System.out.println("Base"); }
+}
+  
+class Derived extends Base {
+    private void foo() { System.out.println("Derived"); } 
+}
+  
 public class Main {
-  public static void main(String[] args) {
-    Animal animal = new Elephant();
-    System.out.println(animal.getType()); // 大象
-  }
-}
+    public static void main(String args[]) {
+        Base b = new Derived();
+        b.foo();
+    }
+} 
 ```
-4. 为什么子类重写父类方法后，要求重写的方法访问权限要更宽松
-5. 多态是如何提高代码的可扩展性的
-6. 使用父类变量保存子类的对象引用后，是否可以调用子类的方法
-7. 父类变量保存子类对象引用后，如果子类重写了父类方法后，调用该方法，是调用父类定义的方法还是子类重写后的方法。为什么？
-8. 什么是抽象类
-9. 抽象类是否可以实例化
-10. 处理哪些类型的数据时需要创建抽象类
-11. 如果将一个引用数据类型类型转换时转换成错误的数据类型会出现什么问题
-12. 是否可以将一个子类对象强制类型转换为父类对象
-13. 是否可以将一个父类对象强制类型转换为其中一种子类对象
+> 子类中的foo方法是private修饰的，无法向上兼容覆盖public修饰的父类foo方法。编译不通过
+5. 
+```
+public class NewClass { 
+	public static class superclass { 
+		static void print() 
+		{ 
+			System.out.println("print in superclass."); 
+		} 
+	} 
+	public static class subclass extends superclass { 
+		static void print() 
+		{ 
+			System.out.println("print in subclass."); 
+		} 
+	} 
+
+	public static void main(String[] args) 
+	{ 
+		superclass A = new superclass(); 
+		superclass B = new subclass(); 
+		A.print(); 
+		B.print(); 
+	} 
+} 
+```
+```
+print in superclass.
+print in superclass.
+static 修饰的方法可以被子类使用但是不可以被重写
+
+```
+6. 
+```
+public class NewClass { 
+	public static class superclass { 
+		void print() 
+		{ 
+			System.out.println("print in superclass."); 
+		} 
+	} 
+
+	public static class subclass extends superclass { 
+		@Override
+		void print() 
+		{ 
+			System.out.println("print in subclass."); 
+		} 
+	} 
+
+	public static void main(String[] args) 
+	{ 
+		superclass A = new superclass(); 
+		superclass B = new subclass(); 
+		A.print(); 
+		B.print(); 
+	} 
+}
+``` 
+```
+print in superclass.
+print in subclass. Override重写
+```
+7. 
+```
+class ClassOne
+{ 
+    protected void getData() 
+    { 
+        System.out.println("Inside ClassOne");
+    } 
+} 
+class ClassTwo extends ClassOne
+{ 
+    protected void getData() 
+    { 
+        System.out.println("Inside ClassTwo");
+    } 
+} 
+  
+public class Test 
+{ 
+    public static void main(String[] args) 
+    { 
+        ClassOne obj = new ClassTwo();
+        obj.getData(); 
+    } 
+} 
+```
+```
+Inside ClassTwo protected修饰的方法不对子类重写造成影响
+```
+8. 
+```
+class Test 
+{ 
+    void myMethod() 
+    { 
+        System.out.println("Test");
+    } 
+} 
+class Derived extends Test
+{ 
+    void myMethod() 
+    { 
+        System.out.println("Derived");
+    } 
+      
+    public static void main(String[] args) 
+    { 
+        Derived object = new Test(); 
+        object.myMethod(); 
+    } 
+} 
+```
+> 父类接受子类对象，编译器默认将子类对象向上转型；子类接受父类对象的时候，需要进行强制类型转换。
+9. 
+```
+class ClassOne
+{ 
+    protected void getData() 
+    { 
+        System.out.println("Inside ClassOne");
+    } 
+} 
+class ClassTwo extends ClassOne
+{ 
+    protected void getData() 
+    { 
+        System.out.println("Inside ClassTwo");
+    } 
+      
+    protected void getValue() 
+    { 
+        System.out.println("ClassTwo");
+    } 
+} 
+  
+public class Test 
+{ 
+    public static void main(String[] args) 
+    { 
+        ClassOne obj = new ClassTwo();
+        obj.getValue(); 
+    } 
+} 
+```
+> 编译不通过，父类中没getValue可以调用
