--- a/0506/0506.md
+++ b/0506/0506.md
@@ -1,8 +1,25 @@
+## 重载与重写
+1. 重载 ：overload
+同一个类中，方法名相同，参数列表不同（参数类型和参数个数以及参数位置不同等）
+
+2. 重写： override
+@override
+继承关系，满足重写条件：
+- 访问权限修饰符（public，protected，不写（只限于在同包路径下）），方法重写数据类型要一样
+- final，static，private（访问权限）不构成重写
+重写后的方法还可以构成方法重载
+
+子类对象看成父类对象使用时没问题的，只要子类访问权限比父类大或者相同
+
+**注：继承到多态抽空看一下直播回放回顾一下**
+宁伴大日无有形，亦胜夜幕满天星。
+太阴无极，至阳无极，明还日月，暗还虚空
+
 ## 以下的程序输出结果
 1. 
 ```
 class Base {
-    final public void show() {
+    final public void show() {//final 位置可以在public之前也可以在public之后
        System.out.println("Base::show() called");
     }
 }
