--- a/0512/0512.md
+++ b/0512/0512.md
@@ -187,7 +187,7 @@ abstract class A
         System.out.println(1);
     }
      
-    static
+    static//static 修饰的代码块在非静态代码块之前被加载
     {
         System.out.println(2);
     }
@@ -200,6 +200,8 @@ public class MainClass
         A a = new A() { };
     }
 }
+//2
+//1
 ```
 11. 
 ```
@@ -224,13 +226,13 @@ public class MainClass
     {
         A a = new A();
          
-        System.out.println(a.s);
+        System.out.println(a.s);//AAA
          
         A.B b = a.new B();
          
-        System.out.println(b.s);
+        System.out.println(b.s);//BBB
          
-        b.methodB();
+        b.methodB();//BBB
     }
 }
 ```
@@ -247,11 +249,13 @@ class A
                 System.out.println("Method Two");
             }
         }
+        //new B().methodTwo();
     }
      
     void methodThree()
     {
-        new B().methodTwo();
+        new B().methodTwo();//无法通过编译，方法内部类需要在方法内部创建对象，通过对象调用方法内部类的方法。
+        //new A().methodOne();
     }
 }
 ```
@@ -295,6 +299,11 @@ public class MainClass
         X.Y y = new X.Y();
     }
 }
+//2
+//1
+//4
+//3
+//3
 ```
 14. 以下代码能否通过编译，为什么
 ```
@@ -306,7 +315,7 @@ class A
             System.out.println(1);
         }
          
-        static
+        static//内部类中不能使用静态代码块不能通过。
         {
             System.out.println(2);
         }
