--- a/0512/0512.md
+++ b/0512/0512.md
@@ -718,12 +718,12 @@ public class Outer
             } 
         }; 
         Inner inner = new Inner(); 
-        return inner.getData(); 
+        return inner.getData(); //20
     } 
       
     public static void main(String[] args) 
     { 
-        System.out.println(data * LocalClass()); 
+        System.out.println(data * LocalClass()); //200
     } 
 } 
 ```
@@ -744,11 +744,11 @@ public class Outer
 					int data = 5; 
 					public int getValue() 
 					{ 
-						return data; 
+						return data; //5
 					} 
 					public int getData() 
 					{ 
-						return data; 
+						return data; //接口中没定义getData方法。
 					} 
 				}; 
 		Outer outer = new Outer(); 
@@ -768,7 +768,7 @@ public class Outer
         private int data = 20; 
         private int getData() 
         { 
-            return data; 
+            return data; //20
         } 
         public void main(String[] args) 
         { 
@@ -779,16 +779,17 @@ public class Outer
     } 
     private int getData() 
     { 
-        return data; 
+        return data; //10
     } 
     public static void main(String[] args) 
     { 
         Outer outer = new Outer(); 
         Outer.Inner inner = outer.new Inner(); 
-        System.out.printf("%d", outer.getData()); 
-        inner.main(args); 
+        System.out.printf("%d", outer.getData()); //10
+        inner.main(args); //20
     } 
 } 
+//1020
 ```
 31. 
 ```
@@ -811,7 +812,7 @@ public class Outer implements OuterInterface.InnerInterface, OuterInterface
     public static void main(String[] args) 
     { 
         Outer obj = new Outer(); 
-        obj.InnerMethod(); 
+        obj.InnerMethod(); //100
     } 
 } 
 ```
